--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Express Tutorial",
   "main": "server.js",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2"
   },
   "devDependencies": {},
